# urc_software

./: .clang-format  .dockerignore  .gitignore  .gitmodules  ArmHardware_8cpp.html  ArmHardware_8cpp.js  ArmHardware_8cpp__incl.map  ArmHardware_8cpp__incl.md5  ArmHardware_8cpp_ac7f8d7d65161767bd5ab6bdcaa43786c.html  ArmHardware_8hpp.html  ArmHardware_8hpp.js  ArmHardware_8hpp__dep__incl.map  ArmHardware_8hpp__dep__incl.md5  ArmHardware_8hpp__incl.map  ArmHardware_8hpp__incl.md5  ArmHardware_8hpp_ac7f8d7d65161767bd5ab6bdcaa43786c.html  ArmHardware_8hpp_source.html  ArmMotorManager_8cpp.html  ArmMotorManager_8cpp__incl.map  ArmMotorManager_8cpp__incl.md5  ArmMotorManager_8h.html  ArmMotorManager_8h.js  ArmMotorManager_8h__dep__incl.map  ArmMotorManager_8h__dep__incl.md5  ArmMotorManager_8h__incl.map  ArmMotorManager_8h__incl.md5  ArmMotorManager_8h_source.html  CANDriver_8cpp.html  CANDriver_8cpp.js  CANDriver_8cpp__incl.map  CANDriver_8cpp__incl.md5  CANDriver_8cpp_a1df990f1a1fc97b95e8d53f719968026.html  CANDriver_8cpp_a320185cd7e6bf74fbc3d52b7ff4a83d2.html  CANDriver_8cpp_a4f005f37bbb2b8e160dcb949df4e9583.html  CANDriver_8cpp_a650518671aeed54e166954cdc9d33441.html  CANDriver_8cpp_a8507f3c11d3addead8ca0fbd55616c62.html  CANDriver_8cpp_a8e3c8befd95b2c25e444889400c140b6.html  CANDriver_8cpp_a90bde0f724d20cd5062c678b2d1a7313.html  CANDriver_8cpp_a9abf760e232f9c52ed7ca5cfba8b2ec5.html  CANDriver_8cpp_af8d995160cef65a27b5db95b028484ee.html  (+865 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+77 more)
src/arm_urc/: CMakeLists.txt  package.xml  plugin.xml
src/arm_urc/include/arm_urc/: ArmHardware.hpp  ArmMotorManager.h  MotorManager.h
src/arm_urc/launch/: arm_launch.py  launchScript.sh
src/arm_urc/src/: ArmHardware.cpp  ArmMotorManager.cpp  ArmMotorManager.h  CANDriver.cpp  MotorManager.cpp  main.cpp
src/arm_urc/src/pwm_reader/: main.cpp
src/arm_urc/urdf/: arm_urc.urdf
src/base_station_urc/: CMakeLists.txt  package.xml
src/base_station_urc/include/cs_libguarded/: cs_cow_guarded.h  cs_deferred_guarded.h  cs_libguarded.cmake  cs_lock_guards.h  cs_lr_guarded.h  cs_ordered_guarded.h  cs_plain_guarded.h  cs_rcu_guarded.h  cs_rcu_list.h  cs_shared_guarded.h
src/base_station_urc/launch/: base_station_launch.py  joy_mapper_launch.py  launchScript.sh  windowsLaunchScript.sh
src/base_station_urc/src/ArmCommandEncoder/: main.cpp
src/base_station_urc/src/LUSIVisionStreamer/: LUSIVisionTelem.cpp  LUSIVisionTelem.h  main.cpp
src/base_station_urc/src/gui/: GUI.h  ImageHelper.cpp  ImageHelper.h  Lifecycle.cpp  Lifecycle.h  Panel.cpp  Panel.h  guiMain.cpp  gui_node.cpp  gui_node.hpp
src/base_station_urc/src/gui/panels/: ComStatusPanel.cpp  ComStatusPanel.h  SoftwareDebugPanel.cpp  SoftwareDebugPanel.h  SystemControlPanel.cpp  SystemControlPanel.h  TelemetryPanel.cpp  TelemetryPanel.h  VideoViewPanel.cpp  VideoViewPanel.h
src/base_station_urc/src/joyMapper/: joyMapper.cpp
src/base_station_urc/src/spaceMouseMapper/: spaceMouseMapper.cpp
src/cross_pkg_messages/: CMakeLists.txt  package.xml
src/cross_pkg_messages/msg/: RoverComputerDriveCMD.msg
src/driveline/: CMakeLists.txt  package.xml  plugin.xml
src/driveline/description/: driveline_urc.xacro
src/driveline/include/driveline_urc/: CANdriver.h  DriveTrainMotorManager.h  driveline_hardware.h  driveline_hardware.hpp
src/driveline/launch/: driveline_launch.py
src/driveline/src/: CANDriver.cpp  DriveTrainMotorManager.cpp  DrivelineHardware.cpp  driveline_hardware.cpp  main.cpp  pid.cpp
src/driveline/urdf/: driveline_urc.xacro
src/driveline_urc/: CMakeLists.txt  package.xml  plugin.xml
src/driveline_urc/config/: driveline_urc.yaml
src/driveline_urc/include/cs_libguarded/: cs_plain_guarded.h
src/driveline_urc/include/driveline_urc/: CANdriver.h  DriveTrainMotorManager.h  DrivelineHardware.hpp  DrivelineMotorManager.h  Limits.h
src/driveline_urc/launch/: driveline_launch.py  launchScript.sh
src/driveline_urc/src/: CANDriver.cpp  DriveTrainMotorManager.cpp  DriveTrainMotorManager.h  DrivelineHardware.cpp  DrivelineHardware.h  DrivelineMotorManager.cpp  StepperDriver.cpp  StepperDriver.h  main.cpp  main.h
src/driveline_urc/src/GpsDriver/: main.cpp
src/driveline_urc/src/MotorCtr/: ArmMotorManager.cpp  ArmMotorManager.h  CANDriver.cpp  CANDriver.h  DriveTrainMotorManager.cpp  DriveTrainMotorManager.h  Limits.h  main.cpp  main.h
src/driveline_urc/src/MotorCtr/PID/: pid.h
src/ground_input_urc/: CMakeLists.txt  package.xml
src/ground_input_urc/launch/: ground_input_launch.py  launchScript.sh
src/lusi_training/: CMakeLists.txt  package.xml
src/lusi_training/launch/: launchScript.sh  training_launch.py
src/lusi_training/src/: hello_node.cpp
src/main_computer_urc/: CMakeLists.txt  main_computer_urc.xml  package.xml  plugin.xml
src/main_computer_urc/config/: simulation_config.yaml
src/main_computer_urc/description/: robot-body.urdf.xacro  robot.materials.xacro  robot.ros2_control.xacro  robot.rviz  robot.urdf.xacro
src/main_computer_urc/description/config/: ros2_control.yaml
src/main_computer_urc/description/urdf/: robot.urdf.xacro
src/main_computer_urc/launch/: launchScript.sh  main_computer_launch.py  rviz_gui_launch.py
src/main_computer_urc/src/ArmManager/: ArmController.cpp  ArmHardware.cpp  main.cpp
src/main_computer_urc/src/DriveTrainManager/: DriveTrainController.cpp  DriveTrainHardware.cpp  main.cpp
src/main_computer_urc/src/MockArmHardware/: ArmHardware.cpp  ArmHardware.hpp
src/main_computer_urc/src/StatusLED/: StatusLED.cpp
src/main_computer_urc/src/VideoStreamer/: VideoStreamer.cpp
src/rover_description_urc/: CMakeLists.txt  package.xml
src/rover_description_urc/launch/: launchScript.sh  rover_description_launch.py  simulation_launch.py  spawn_launch.py
src/rover_description_urc/meshes/: link_FL.STL
src/shared_code_urc/: CMakeLists.txt  MotorManager.cpp  package.xml
src/shared_code_urc/config/: robot_control.yaml
(+73 files in other folders)
