<?xml version="1.0"?>
<package format="2">
  <name>arm_urc</name>
  <version>0.0.0</version>
  <description>The arm pi_nodes package for ROS2</description>

  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cross_pkg_messages</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>controller_manager</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cross_pkg_messages</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugin.xml"/>
  </export>
</package>
