<?xml version="1.0"?>
<package format="2">
  <name>driveline_urc</name>
  <version>0.0.0</version>
  <description>The driveline pi_nodes package for ROS2</description>

  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cross_pkg_messages</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cross_pkg_messages</exec_depend>

  <export>
  </export>
</package>
