<?xml version="1.0"?>
<package format="2">
  <name>ground_input_urc</name>
  <version>0.0.0</version>
  <description>Launches ROS 2 joy nodes for ground input control.</description>

  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
