<?xml version="1.0"?>
<package format="2">
  <name>main_computer_urc</name>
  <version>0.0.0</version>
  <description>ROS2 package for DriveTrainManager node</description>

  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>cross_pkg_messages</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>controller_manager</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cross_pkg_messages</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
  </export>
</package>
