<?xml version="1.0"?>
<package format="2">
  <name>shared_code_urc</name>
  <version>0.0.0</version>
  <description>hardware description</description>

  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>xacro</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
